--- a/src/styles/dragdropquiz.css
+++ b/src/styles/dragdropquiz.css
@@ -28,11 +28,19 @@ body {
 }
 
 .back-button {
-  background: none;
-  border: none;
-  font-size: 22px;
+  background-color: white;
+  color: purple;
+  border: 2px solid purple;
+ width: 5px;
+  height: 30px;
+  padding: 3px 15px;
+  border-radius: 8px;
+  font-size: 16px;
   color: #6c5ce7;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .quiz-title {
@@ -46,10 +54,11 @@ body {
   background-color: white;
   color: purple;
   border: 2px solid purple;
-  width: 40px;
-  height: 40px;
+ width: 5px;
+  height: 30px;
+  padding: 3px 15px;
   border-radius: 8px;
-  font-size: 18px;
+  font-size: 16px;
   cursor: pointer;
   display: flex;
   align-items: center;
@@ -70,9 +79,10 @@ body {
 }
 
 .lesson-text {
-  font-size: 16px;
+  font-size: 14px;
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: 3px;
+  margin-top: 5px;
 }
 
 .progress-underscores {
@@ -82,8 +92,9 @@ body {
 
 .white-underscore,
 .purple-underscore {
-  font-size: 16px;
+  font-size: 20px;
   font-weight: bold;
+  margin-top: -10px;;
 }
 
 .white-underscore {
@@ -223,7 +234,7 @@ body {
 /* Shuffle & Continue Buttons */
 .shuffle-button {
   width: 50px;
-  height: 40px;
+  height: 44px;
   background-color: white;
   color: black;
   border: 2px solid lightgray;
@@ -233,7 +244,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 
 .continue-button {
@@ -246,7 +257,7 @@ body {
   cursor: pointer;
   transition: 0.3s;
   border: none;
-  margin-top: 50px;
+  margin-top: 20px;
 }
 .continue-button:hover {
   background-color: #5b0ca7;
